package com.xxx.designpatterns.creationalpattern.simplefactory;

/**
 * 车
 *
 * @author guodq
 * @create 2018-06-下午4:52
 */
public interface Car {


    void run();
}
