package com.xxx.designpatterns.creationalpattern.simplefactory;

/**
 * 法拉利
 *
 * @author guodq
 * @create 2018-06-下午5:17
 */

public class Ferrari implements Car {

    @Override
    public void run() {
        System.out.println("Ferrari run");
    }
}
