package com.xxx.designpatterns.creationalpattern.simplefactory;

/**
 * 特斯拉
 *
 * @author guodq
 * @create 2018-06-下午5:15
 */

public class Tesla implements Car{

    @Override
    public void run() {
        System.out.println("Tesla run");
    }
}
